--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -5,6 +5,7 @@
     "database": "nienluancoso",
     "host": "127.0.0.1",
     "dialect": "mysql",
+    "logging": false,
     "timezone": "+07:00"
   },
   "test": {
